--- a/package.json
+++ b/package.json
@@ -43,5 +43,5 @@
   "devDependencies": {
     "gh-pages": "^3.2.3"
   },
-  "homepage": "http://sashachish.github.io/keyboard"
+  "homepage": "http://sashachish.github.io/keyboard-react"
 }
